crates/parser/src/tests/snapshots/call_basic.snap
---
source: crates/parser/src/tests.rs
assertion_line: 75
expression: "(test[1], ast, ast_string)"
---
- "a(b, c)"
- Ok:
    nodes:
      - Expr:
          Call:
            name: a
            args:
              - Expr:
                  Ident:
                    name: b
              - Expr:
                  Ident:
                    name: c
- (a b c)

