crates/parser/src/tests/snapshots/call_with_expr.snap
---
source: crates/parser/src/tests.rs
assertion_line: 74
expression: "(test[1], ast, ast_string)"
---
- "a(b + 1, c - 2 / 4)"
- Ok:
    nodes:
      - Expr:
          Call:
            name: a
            args:
              - Expr:
                  BinOp:
                    op: Add
                    lhs:
                      Expr:
                        Ident:
                          name: b
                          ty: ~
                    rhs:
                      Expr:
                        Lit:
                          value:
                            UInt64: 1
                          ty: ~
                    ty: ~
              - Expr:
                  BinOp:
                    op: Sub
                    lhs:
                      Expr:
                        Ident:
                          name: c
                          ty: ~
                    rhs:
                      Expr:
                        BinOp:
                          op: Div
                          lhs:
                            Expr:
                              Lit:
                                value:
                                  UInt64: 2
                                ty: ~
                          rhs:
                            Expr:
                              Lit:
                                value:
                                  UInt64: 4
                                ty: ~
                          ty: ~
                    ty: ~
            ty: ~
- (a (+ b 1) (- c (/ 2 4)))

