crates/parser/src/tests/snapshots/char_basic.snap
---
source: crates/parser/src/tests.rs
assertion_line: 81
expression: "(test[1], ast, ast_string)"
---
- "let c: char = 'a'"
- Ok:
    nodes:
      - Let:
          name: c
          antn: char
          init:
            Lit:
              value:
                Char: 97
- "(let c:char a)"

