crates/parser/src/tests/snapshots/char_control.snap
---
source: crates/parser/src/tests.rs
assertion_line: 81
expression: "(test[1], ast, ast_string)"
---
- "let nl: char = '\n'"
- Ok:
    nodes:
      - Stmt:
          Let:
            name: nl
            antn: char
            init:
              Expr:
                Lit:
                  value:
                    Char: 10
- "(let nl:char \n)"

