crates/parser/src/tests/snapshots/func_def_cant_redefine.snap
---
source: crates/parser/src/tests.rs
assertion_line: 162
expression: "(test[1], ast, ast_string)"
---
- "\nfn foo() { }\nfn foo() { }\n"
- Err:
    message: "Function `foo` can't be redefined"
    line: 0
    column: 0
- "Parsing error: Function `foo` can't be redefined"

