crates/parser/src/tests/snapshots/func_def_no_ret_ty.snap
---
source: crates/parser/src/tests.rs
assertion_line: 163
expression: "(test[1], ast, ast_string)"
---
- "\nfn a(b: int) {\n    b\n}\n"
- Ok:
    nodes:
      - kind:
          Fn:
            proto:
              name: a
              args:
                - - b
                  - Int32
              ret_ty: Void
              is_extern: false
            body:
              kind:
                Block:
                  list:
                    - kind:
                        Ident:
                          name: b
- "(define (a b:int32) '(b))"

