crates/parser/src/tests/snapshots/gt_lt_lt.snap
---
source: crates/parser/src/tests.rs
assertion_line: 158
expression: "(test[1], ast, ast_string)"
---
- a < b / 40
- Ok:
    nodes:
      - Expr:
          BinOp:
            sym: Lt
            lhs:
              Expr:
                Ident:
                  name: a
                  ty: ~
            rhs:
              Expr:
                BinOp:
                  sym: Div
                  lhs:
                    Expr:
                      Ident:
                        name: b
                        ty: ~
                  rhs:
                    Expr:
                      Lit:
                        value:
                          UInt64: 40
                        ty: ~
                  ty: ~
            ty: ~
- (< a (/ b 40))

