crates/parser/src/tests/snapshots/if_bool_1.snap
---
source: crates/parser/src/tests.rs
assertion_line: 211
expression: "(test[1], ast, ast_string)"
---
- "if true { foo } else { bar }"
- Ok:
    nodes:
      - node:
          Cond:
            cond_expr:
              node:
                Lit:
                  value:
                    Bool: true
            then_block:
              node:
                Block:
                  list:
                    - node:
                        Ident:
                          name: foo
            else_block:
              node:
                Block:
                  list:
                    - node:
                        Ident:
                          name: bar
- "(if true '(foo) '(bar))"

